--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.12.13",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-number-format": "^4.6.4"
   },
   "devDependencies": {
     "eslint": "^7.28.0",
