--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,10 @@
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "moment": "^2.29.1",
+    "react-number-format": "^4.6.4",
+    "react-paypal-button-v2": "^2.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
