--- a/package.json
+++ b/package.json
@@ -21,11 +21,8 @@
     "express-async-handler": "^1.1.4",
     "express-fileupload": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.29.1",
     "mongoose": "^5.12.13",
-    "path": "^0.12.7",
-    "react-number-format": "^4.6.4",
-    "react-paypal-button-v2": "^2.6.3"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "eslint": "^7.28.0",
